# OCSkins

./: .gitignore  README.md  pyproject.toml
assets/inspiration/: README.md
assets/skins/crab/: skin.json
scripts/: build.ps1  generate_assets.py  run-dev.ps1
src/openclaw_skins/: __main__.py  app.py  cli.py  config.py  controller.py  device_auth.py  gateway.py  identity.py  models.py  resources.py  settings.py  skins.py  theme.py  window.py
tests/: conftest.py  test_busy_tracker.py  test_cli.py  test_controller.py  test_gateway.py  test_manifest.py  test_settings.py  test_window.py
